# code_navigation_devon

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: content_document.rs  file.rs  indexes.rs  intelligence.rs  lib.rs  main.rs  repository.rs  schema.rs  search.rs  snippet.rs  sync_handle.rs
src/intelligence/: code_navigation.rs  language.rs
